--- a/AML_3)_LSTM_Model_Training.ipynb
+++ b/AML_3)_LSTM_Model_Training.ipynb
@@ -21,43 +21,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "collapsed": true,
-        "id": "vAuiTXINYrZY",
-        "outputId": "23f7fc18-1a6b-44bf-b262-acf53d4708a1"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: torchmetrics in /usr/local/lib/python3.10/dist-packages (1.6.1)\n",
-            "Requirement already satisfied: numpy>1.20.0 in /usr/local/lib/python3.10/dist-packages (from torchmetrics) (1.26.4)\n",
-            "Requirement already satisfied: packaging>17.1 in /usr/local/lib/python3.10/dist-packages (from torchmetrics) (24.2)\n",
-            "Requirement already satisfied: torch>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from torchmetrics) (2.5.1+cu121)\n",
-            "Requirement already satisfied: lightning-utilities>=0.8.0 in /usr/local/lib/python3.10/dist-packages (from torchmetrics) (0.11.9)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.10/dist-packages (from lightning-utilities>=0.8.0->torchmetrics) (75.1.0)\n",
-            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.10/dist-packages (from lightning-utilities>=0.8.0->torchmetrics) (4.12.2)\n",
-            "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from torch>=2.0.0->torchmetrics) (3.16.1)\n",
-            "Requirement already satisfied: networkx in /usr/local/lib/python3.10/dist-packages (from torch>=2.0.0->torchmetrics) (3.4.2)\n",
-            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.10/dist-packages (from torch>=2.0.0->torchmetrics) (3.1.5)\n",
-            "Requirement already satisfied: fsspec in /usr/local/lib/python3.10/dist-packages (from torch>=2.0.0->torchmetrics) (2024.10.0)\n",
-            "Requirement already satisfied: sympy==1.13.1 in /usr/local/lib/python3.10/dist-packages (from torch>=2.0.0->torchmetrics) (1.13.1)\n",
-            "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.10/dist-packages (from sympy==1.13.1->torch>=2.0.0->torchmetrics) (1.3.0)\n",
-            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from jinja2->torch>=2.0.0->torchmetrics) (3.0.2)\n"
-          ]
-        }
-      ],
-      "source": [
-        "!pip install torchmetrics"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 2,
       "metadata": {
         "colab": {
@@ -89,30 +52,6 @@
       ],
       "source": [
         "!pip install optuna"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip install torcheval"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "X5A8ETfU9FCt",
-        "outputId": "51689d4b-a18c-4b2b-a2a6-64b5216d83a7"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Requirement already satisfied: torcheval in /usr/local/lib/python3.10/dist-packages (0.0.7)\n",
-            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.10/dist-packages (from torcheval) (4.12.2)\n"
-          ]
-        }
       ]
     },
     {
@@ -835,13 +774,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4USID-k4c5YM",
-        "outputId": "90daaa98-7f53-42c8-c89c-ab436cced646"
+        "outputId": "37c6f817-c3f4-40f9-c1a6-330ca9a56753"
       },
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.10/dist-packages/optuna/distributions.py:524: UserWarning: Choices for a categorical distribution should be a tuple of None, bool, int, float and str for persistent storage but contains [[43557, 35], [7, 2], [24, 3], [2, 1], [43557, 35], [13, 2], [13, 2], [18, 3], [18, 3]] which is of type list.\n",
             "  warnings.warn(message)\n",
@@ -880,8 +822,11 @@
           ]
         },
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Total trainable params: 4398882\n"
           ]
@@ -2709,7 +2654,7 @@
       "machine_shape": "hm",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyONKkTSctLS4CwSibaGjtwq",
+      "authorship_tag": "ABX9TyNWD1ykd8M7QF9rdq7+xQYM",
       "include_colab_link": true
     },
     "kernelspec": {
